--- a/pizzas/templates/pizzas/index.html
+++ b/pizzas/templates/pizzas/index.html
@@ -2,7 +2,13 @@
 
 {% block content %}
     <p>
-    Our Pizzeria offers a wide variety of options!
+     Home of our world-famous pizzas with imported ingredients!
     </p>
 
+    <style>
+        body {
+          background-image: url('https://s3.eu-west-1.amazonaws.com/images.prod.phoode.com/photos/project/5fe36e9a16526.jpeg');
+          background-repeat: no-repeat;
+        }
+        </style>
 {% endblock content %}
