--- a/pizzas/templates/pizzas/pizzas.html
+++ b/pizzas/templates/pizzas/pizzas.html
@@ -17,4 +17,11 @@
 
 </ul>
 
+<style>
+    body {
+      background-image: url('https://img.freepik.com/premium-photo/pop-art-creative-design-delicious-italian-pizza-pink-wall_189440-54.jpg?w=2000');
+      background-repeat: no-repeat;
+    }
+    </style>
+
 {% endblock content %}
