--- a/pizzas/templates/pizzas/pizzas.html
+++ b/pizzas/templates/pizzas/pizzas.html
@@ -19,7 +19,7 @@
 
 <style>
     body {
-      background-image: url('https://img.freepik.com/premium-photo/pop-art-creative-design-delicious-italian-pizza-pink-wall_189440-54.jpg?w=2000');
+      background-image: url('https://s3.eu-west-1.amazonaws.com/images.prod.phoode.com/photos/project/5fe36e9a16526.jpeg');
       background-repeat: no-repeat;
     }
     </style>
