--- a/pizzas/templates/pizzas/index.html
+++ b/pizzas/templates/pizzas/index.html
@@ -147,7 +147,7 @@ body {
     <h2>NEW: Hawaiian Style Pizza</h2>
     <h5>Return of a fan-favorite, Dec 7, 2022</h5>
     <div class="hawaiianimg" style="height:200px;"></div>
-    <p>Try new Hawaiian Pizza today! </p>
+    <p>Try our new Hawaiian Pizza today! </p>
     <p>In this life, there are many age-old questions:</p>
     <p> 1) What is the true meaning of happiness? </p>
     <p> 2) What is our purpose on this Earth?  </p>
